@@ -112,9 +112,9 @@ OP_ClientReady=0x3f83				# 0x422d
 OP_SetServerFilter=0x5b27
 
 # Guild Opcodes - Disabled until crashes are resolved in RoF
-OP_GetGuildMOTD=0x35dc
-OP_GetGuildMOTDReply=0x4586
-OP_GuildMemberUpdate=0x0048	# Was 0x5643
+OP_GetGuildMOTD=0x7ba3				# Was 0x35dc
+OP_GetGuildMOTDReply=0x42a2			# Was 0x4586
+OP_GuildMemberUpdate=0x0048			# Was 0x5643
 OP_GuildInvite=0x5f8e
 OP_GuildRemove=0x296d
 OP_GuildPeace=0x17eb
@@ -126,8 +126,8 @@ OP_GuildDelete=0x241b
 OP_GuildInviteAccept=0x78a5
 OP_GuildDemote=0x3100
 OP_GuildPublicNote=0x3c2c
-OP_GuildManageBanker=0x0737
-OP_GuildBank=0x10c3
+OP_GuildManageBanker=0x096d			# Was 0x0737
+OP_GuildBank=0x2ab0					# Was 0x10c3
 OP_SetGuildRank=0x3599
 OP_GuildUpdateURLAndChannel=0x7851
 OP_GuildStatus=0x25a5
@@ -140,7 +140,7 @@ OP_GuildManageRemove=0x0000
 OP_GuildManageAdd=0x0000
 OP_GuildManageStatus=0x0000
 
-# GM/guide opcodes
+# GM/Guide Opcodes
 OP_GMServers=0x2612
 OP_GMBecomeNPC=0x5201
 OP_GMZoneRequest=0x69e5
@@ -151,14 +151,16 @@ OP_GMHideMe=0x4c65
 OP_GMDelCorpse=0x6034
 OP_GMApproval=0x0e37
 OP_GMToggle=0x1276
-OP_GMSummon=0x684f
-OP_GMEmoteZone=0x0655
-OP_GMEmoteWorld=0x1935
+OP_GMSummon=0x0655			# Was 0x684f
+OP_GMEmoteZone=0x1b39		# Was 0x0655
+OP_GMEmoteWorld=0x1f8c		# Was 0x1935
 OP_GMFind=0x6160
 OP_GMKick=0x5646
 OP_GMKill=0x507e
 OP_GMNameChange=0x4434		# Was 0x51f7
-OP_GMLastName=0x4dd7
+OP_GMLastName=0x3077		# Was 0x4dd7
+
+# Misc Opcodes
 OP_InspectRequest=0x23f1
 OP_InspectAnswer=0x5794
 OP_InspectMessageUpdate=0x3064
@@ -268,13 +270,13 @@ OP_WeaponEquip2=0x012f		# Was 0x6022
 OP_WeaponUnequip2=0x1076	# Was 0x0110
 OP_ApplyPoison=0x1499
 OP_Save=0x2e6f
-OP_TestBuff=0x3772
+OP_TestBuff=0x046e			# Was 0x3772
 OP_CustomTitles=0x471a
 OP_Split=0x269e
 OP_YellForHelp=0x0017
 OP_LoadSpellSet=0x38b4
 OP_Bandolier=0x2b6f
-OP_PotionBelt=0x4d3b
+OP_PotionBelt=0x2d1b		# Was 0x4d3b
 OP_DuelResponse=0x0dee
 OP_DuelResponse2=0x5e04
 OP_SaveOnZoneReq=0x36b1
@@ -305,7 +307,7 @@ OP_OnLevelMessage=0x09cd
 OP_AugmentInfo=0x7812
 OP_Petition=0x2885
 OP_SomeItemPacketMaybe=0x11a0
-OP_PVPStats=0x0000				# Unsure
+OP_PVPStats=0x3034				# Unsure
 OP_PVPLeaderBoardRequest=0x1bce
 OP_PVPLeaderBoardReply=0x3e78
 OP_PVPLeaderBoardDetailsRequest=0x46f4
@@ -313,14 +315,13 @@ OP_PVPLeaderBoardDetailsReply=0x6a60
 OP_RestState=0x3ad5
 OP_RespawnWindow=0x7767
 OP_LDoNButton=0x596e
-OP_SetStartCity=0x2d1b
+OP_SetStartCity=0x7936			# Was 0x2d1b
 OP_VoiceMacroIn=0x202e
 OP_VoiceMacroOut=0x3920
 OP_ItemViewUnknown=0x0b64
 OP_VetRewardsAvaliable=0x05d9
 OP_VetClaimRequest=0xcdde
 OP_VetClaimReply=0x361b
-OP_CrystalCountUpdate=0x3f60	# Was 0x4ddb
 OP_DisciplineUpdate=0x2483		# Was 0x2f05
 OP_DisciplineTimer=0x4933		# Was 0x5e3f
 OP_BecomeCorpse=0x0000			# Unused?
@@ -337,31 +338,32 @@ OP_AltCurrencyPurchase=0x74a8
 OP_AltCurrencySell=0x3167
 OP_AltCurrencySellSelection=0x3c47
 OP_AltCurrencyReclaim=0x46ed
-OP_CrystalReclaim=0x7616		# Was 0x36e0
-OP_CrystalCreate=0x5a82			# Was 0x51e0
+OP_CrystalCountUpdate=0x5a82	# Was 0x3f60
+OP_CrystalCreate=0x7616			# Was 0x5a82
+OP_CrystalReclaim=0x73db		# Was 0x7616
 OP_Untargetable=0x7717
 OP_IncreaseStats=0x0711
 OP_Weblink=0x7cce
 #OP_OpenInventory=0x0000			# Likely does not exist in RoF -U
 OP_OpenContainer=0x654f
 
-OP_DzQuit=0x26c2
-OP_DzListTimers=0x7844
-OP_DzAddPlayer=0x0dc1
-OP_DzRemovePlayer=0x4995
-OP_DzSwapPlayer=0x17b2
-OP_DzMakeLeader=0x1aff
-OP_DzPlayerList=0x30df
-OP_DzJoinExpeditionConfirm=0x15d4
-OP_DzJoinExpeditionReply=0x2163
-OP_DzExpeditionInfo=0x0b3b
-OP_DzMemberStatus=0x4021
-OP_DzLeaderStatus=0x348f
+OP_DzQuit=0x5fc8
+OP_DzListTimers=0x67b9
+OP_DzAddPlayer=0x5ca2
+OP_DzRemovePlayer=0x0dc1
+OP_DzSwapPlayer=0x4995
+OP_DzMakeLeader=0x17b2
+OP_DzPlayerList=0x1aff
+OP_DzJoinExpeditionConfirm=0x30df
+OP_DzJoinExpeditionReply=0x15d4
+OP_DzExpeditionInfo=0x3861
+OP_DzExpeditionList=0x0b3b
+OP_DzMemberStatus=0x26c2
+OP_DzLeaderStatus=0x4021
 OP_DzExpeditionEndsWarning=0x32eb
-OP_DzExpeditionList=0x5fc8
-OP_DzMemberList=0x3354
-OP_DzCompass=0x4f09		# Was 0x4af9
-OP_DzChooseZone=0x0000 # Maybe 0x29d6
+OP_DzMemberList=0x348f
+OP_DzCompass=0x0e01		# Was 0x4f09
+OP_DzChooseZone=0x0000	# Maybe 0x29d6
 
 # New Opcodes
 OP_SpawnPositionUpdate=0x0000	# Actually OP_MobUpdate ?
@@ -511,7 +513,7 @@ OP_RaidJoin=0x0000
 # Button-push commands
 OP_Taunt=0x0af6
 OP_CombatAbility=0x6e4c
-OP_SenseTraps=0x2ee0
+OP_SenseTraps=0x7462			# Was 0x2ee0
 OP_PickPocket=0x047b
 OP_DisarmTraps=0x0000
 OP_Disarm=0x70a9
